# clown-circus-carnival

./: .dockerignore  .gitignore  AGENTS.md  CI_IMPLEMENTATION.md  Dockerfile  README.md  TESTING.md  TEST_COMMANDS.md  docker-compose.yml  package.json  render.yaml
.github/instructions/: copilot-instructions.instructions.md
.github/workflows/: ci.yml  guardrails.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/circus_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py
docs/: ai-usage.md
docs/architecture/: api-integration.md  backend-design.md  openapi-spec.md
docs/decisions/: backend-api.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: index.css
frontend/src/components/game/: CircusGame.tsx  GameOver.tsx  StartScreen.tsx
frontend/src/hooks/: useAudio.ts  useGameEngine.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: game.ts
frontend/src/utils/: gameState.test.ts  scoring.test.ts  scoring.ts
src/: AGENTS.md  index.css
src/components/game/: GameCanvas.tsx  GameHUD.tsx  StartScreen.tsx
src/hooks/: useAudio.ts  useGameEngine.ts
src/types/: game.ts
